<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textAlignment="textEnd" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_reference_id"
                android:paddingTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextReferenceId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textAlignment="textEnd" />
            </com.google.android.material.textfield.TextInputLayout>


            <RadioGroup
                android:id="@+id/radioGroupPaymentType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonCredit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/label_credit" />

                <RadioButton
                    android:id="@+id/radioButtonDebit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_debit" />

                <RadioButton
                    android:id="@+id/radioButtonPix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_pix" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_installments">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextInstallments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textAlignment="textEnd" />
                </com.google.android.material.textfield.TextInputLayout>
            </RadioGroup>

            <TextView
                android:id="@+id/textViewPaymentResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textAlignment="center"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/containerTimeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18sp"
                    android:text="@string/timeout_title"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/label_discovery_timeout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/discoveryTimeoutTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/label_processing_timeout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/processingTimeoutTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/label_network_timeout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/networkTimeoutTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/label_total_elapsed_timeout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/totalElapsedTimeoutTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonTimeoutCancel"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="12dp"
                        android:text="@string/button_cancel"
                        android:textColor="@android:color/black" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonTimeoutConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:padding="12dp"
                        android:text="@string/button_confirm" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/buttonTimeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timeout" />

            <Button
                android:id="@+id/buttonInitialize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/initialize" />

            <Button
                android:id="@+id/buttonPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_button_pay" />

            <LinearLayout
                android:id="@+id/containerCredential"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18sp"
                    android:text="@string/define_credential"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/label_marketplace">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/marketplaceTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/label_seller">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sellerTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/label_access_key">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/accessKeyTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonCancel"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="12dp"
                        android:text="@string/button_cancel"
                        android:textColor="@android:color/black" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:padding="12dp"
                        android:text="@string/button_confirm" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/buttonShowConfigDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_config_details" />

            <TextView
                android:id="@+id/textViewPaymentInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewInitializationInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:visibility="gone"/>

</RelativeLayout>
